--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "immutable": "^4.3.0",
     "luxon": "^3.3.0",
+    "overlayscrollbars-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
