--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@mui/x-data-grid": "^6.8.0",
     "@preact/signals-react": "^1.3.2",
     "axios": "^1.4.0",
     "immutable": "^4.3.0",
