--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
