--- a/package.json
+++ b/package.json
@@ -2,13 +2,31 @@
   "name": "commission",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite --mode development --host --port 3000",
     "build": "tsc && vite build",
+    "build:stg": "tsc && vite build --mode staging --debug",
+    "build:production": "tsc && vite build --mode production",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch:coverage": "jest --watchAll --coverage",
+    "test:coverage": "jest --coverage"
   },
+  "keywords": [
+    "react",
+    "vite",
+    "typescript",
+    "jest",
+    "tailwind",
+    "template",
+    "starter",
+    "css-modules",
+    "eslint",
+    "prettier",
+    "husky",
+    "commit-lint"
+  ],
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -28,6 +46,11 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^6.1.1",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
@@ -35,12 +58,18 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.6.3",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
     "postcss": "^8.4.24",
+    "prettier": "^3.0.2",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.63.3",
     "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
